Change index.html to Portfolio site.

--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,55 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello Coursera</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Your Modern Portfolio</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+	<header>
+		<nav>
+			<div class="container">
+				<h1>Your Name</h1>
+				<ul>
+					<li><a href="#about">About</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+
+	<section id="about">
+		<div class="container">
+			<h2>About Me</h2>
+			<p>Write a compeling introduction about yourself here.
+</p>
+		</div>
+	</section>
+
+	<section id="portfolio">
+		<div class="container">
+			<h2>Portfolio</h2>
+			<!-- Add your projects here -->
+			<div class="project">
+				<img src="project1.jpg" alt="Project1">
+				<h3>Project 1</h3>
+				<p>Description of Project 1</p>
+			</div>
+			<!-- Repeat for other projects -->
+		</div>
+	</section>
+
+	<section id="contact">
+		<div class="container">
+			<h2>Contact Me</h2>
+			<p>You can reach me at your@email.com</p>
+		</div>
+	</section>
+
+	<footer>
+		<div class="container">
+			<p>&copy; 2023 Your Name</p>
+		</div>
+	</footer>
 </body>
 </html>
